syntax = "proto3";

package dev.baaart.rtx.grpc.models.unary;

option java_multiple_files = true;
option java_package = "dev.baaart.rtx.grpc.models.unary";
option java_outer_classname = "UnaryProto";

// The greeting service definition.
service UnaryService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
